# photo-router

./: Dockerfile  Makefile  README.md  config.yaml  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py  router.py  scanner.py
app/templates/: index.html
tests/: conftest.py  test_config.py  test_router.py  test_scanner.py
